.mdを外して正しいページにリンク

--- a/starryboard/features/v0.md
+++ b/starryboard/features/v0.md
@@ -19,12 +19,12 @@
 
 ## ページ別の説明
 
-* [シリーズページ](page-series-and-episodes.md)
-* [リストページ](page-cut-list.md)
-* [キャンバスページ](page-canvas.md)
-* [プレビューページ](page-preview.md)
-* [エクスポートページ](page-export.md)
-* [設定ページ](page-settings.md)
+* [シリーズページ](v0/page-series-and-episodes)
+* [リストページ](v0/page-cut-list)
+* [キャンバスページ](v0/page-canvas)
+* [プレビューページ](v0/page-preview)
+* [エクスポートページ](v0/page-export)
+* [設定ページ](v0/page-settings)
 
 
 ## 用語説明
