--- a/starryboard/features/v0.md
+++ b/starryboard/features/v0.md
@@ -17,23 +17,13 @@
 * エピソードファイルはウィンドウに紐づいて管理されるため、既に開かれているエピソードを他のウィンドウが開くことはできません
 * プレビュー表示のみ、エピソード内から別ウィンドウを表示できます（プレビューウィンドウの表示設定から切替可能です）
 
-## ページ別の説明
-
-* [シリーズページ](v0/page-series-and-episodes)
-* [リストページ](v0/page-cut-list)
-* [キャンバスページ](v0/page-canvas)
-* [プレビューページ](v0/page-preview)
-* [エクスポートページ](v0/page-export)
-* [設定ページ](v0/page-settings)
-
-
 ## 用語説明
 
 ### エピソード
 
 エピソードは１話分の絵コンテを格納するコンテナです。
 
-Starryboardではエピソードを１つのファイルとして管理しており、ファイル中には全てのカット、カット内の画像、キャンバス設定、カテゴリ・ロール設定、カメラ・レイヤーのモーション（動き、アニメーション）、エクスポート方法などが記録されます。
+Starryboardではエピソードを１つのファイルとして管理しており、ファイル中には全てのカット、カット内の画像、キャンバス設定、カメラ・レイヤーのモーション（動き、アニメーション）、エクスポート方法などが記録されます。
 
 > エピソードファイルのフォーマットの詳細 
 > 
@@ -43,13 +33,40 @@ Starryboardではエピソードを１つのファイルとして管理してお
 
 シリーズは複数エピソードをまとめるフォルダです。ファイルシステム上のフォルダをそのままシリーズとして扱っています。
 
-シリーズはフォルダですが、フォルダ内にフォルダを作る使い方には対応しません。全てのシリーズは横並びに表示されます。（v0.3.8時点）
+シリーズはフォルダですが、フォルダ内にフォルダを作る機能は今後対応予定です。（v0.4.0時点では未対応）
 
 ### カット
 
 映像構成単位の一つとして動画撮影時にひと回しで撮影する範囲を「カット」と呼ぶそうですが、Starrybaordではこの捉え方を採用しています。
 
-カットにはカット番号、イメージ、アクションとセリフのテキスト、表示する秒数などのデータが含まれます。
+カットにはカット番号、イメージ、アクションとセリフのテキスト、表示する秒数、そして画像などのデータが含まれます。
+
+### レイヤー
+
+１枚の画像を格納するコンテナです。レイヤーにはラベルを付けたりタグを複数付けたりできます。
+
+画像形式はベクターまたはラスター（Png画像）で保存されます。保存形式は設定画面の「カットとキャンバス」から変更できます。
+
+### タグ
+
+主にキャラクターや背景など描き分ける対象となる識別用のラベルです。
+
+プレビューやエクスポートの際にレイヤーの表示切替を管理するために使ったり、台本出力時に話者名識別をする際の優先識別ラベルとして使い割れます。
+
+アプリ内の検索時にもタグを元に検索出来るようになる予定です（v0.4.0時点では未対応）
+
+### 接続カット
+
+カットとカットを繋げると接続カットとして扱われ、接続カット向けの機能が利用できるようになります
+
+* 共有レイヤー機能が有効になります
+* オニオンスキンの一括指定が利用できるようになります
+
+### 共有レイヤー
+
+レイヤー単位で共有レイヤーを指定できます。共有レイヤーは接続カット内のどのカットにも表示されるようになります。
+
+共有レイヤーも通常のレイヤーと同様に並び順を変えることができます。（レイヤーの
 
 ### シーン
 
@@ -57,21 +74,20 @@ Starryboardではエピソードを１つのファイルとして管理してお
 
 プレビュー時はシーン区切り単位で範囲を指定できます。
 
+## ページ説明
 
-### カテゴリとロール
+### シリーズ一覧ページの使い方
 
-事前設定レイヤー構造として「カテゴリ」と「ロール」の考え方を取り入れています。
 
-絵の構成要素を分解していくと２つの軸があるのではと仮説を立てました。カテゴリは「ラフ線」「線の清書」「塗り」「注釈」などの絵の発展段階ごとに分けられたレイヤー構造です。もう一つのロールは「キャラクター」「背景」「小物」などの同時的に存在する人や物、風景を隔てるレイヤー構造です。
 
-> 物や風景もイメージを構成し映像の印象を決める要素として役割を持つことから、キャラクターと並んでロールと表現しています。
+### エピソード一覧ページの使い方
 
-カットにロールを追加するごとに事前に決めたカテゴリ分のレイヤーが追加されます。
+### リストページの使い方
 
-> 例えばエピソードに４つのカテゴリを設定した状態でカットに４つロールを持たせた場合は合計１６レイヤー存在することになります。
+### キャンバスページの使い方
 
-そんなにレイヤーを先に作るとデータ量が無駄に増えるのではと思われるかもしれませんが、レイヤーの画像データが保存されるのは各レイヤーの編集後となり、未作成状態のレイヤーはデータ量がほぼゼロです。
+### プレビューページの使い方
 
-全てのカットでレイヤー構造が決まっている副次効果として、プレビューやエクスポートの際に映像に含める要素を後から変更することも可能です。（例えば「注釈を消して動画化」「キャラクターの線だけ連番画像化」など）
+### エクスポートページの使い方
 
-レイヤーアニメーションを設定する際はロールごとに絵を動かすことができます。
+
