--- a/starryboard/features/v0.md
+++ b/starryboard/features/v0.md
@@ -1,8 +1,69 @@
 # Starryboardの使い方
 
-この記事が対象とするStarryboard のバージョン 
+## 絵コンテ作業の流れとStarryboard
 
-> Starryboard v0
+### エピソード作成
+
+Starryboardを起動して最初に開かれるページは「シリーズ一覧ページ」です。一番上の「作業用フォルダ」をクリックしてみましょう。
+
+シリーズを開くとエピソードは無く空っぽの表示です。まずはエピソードファイルを作ってみましょう。
+
+右上の「エピソードを追加」を押しみてください。エピソード作成画面が表示されるので、タイトルのところに「テスト」と入力して右上「作成」を押しましょう。するとエピソードが作成されて新しい画面が表示されます。
+
+![](<スクリーンショット 2025-05-15 183625.png>)
+
+### カット一覧ページから画像編集ページへ移動する
+
+エピソードを作成するとカットが一覧表示された「リストページ」が表示されます。リストページは編集ではなくセリフ等テキスト編集と確認をメインに行うページです。
+
+カットの画像編集ページに移動するには下の画像に示した赤い斜線の場所を押してみてください。キャンバスページが表示されます。
+
+![](<スクリーンショット 2025-05-15 102541.png>)
+
+キャンバスページではカットの画像を編集できます。どこを触っても壊れないので自由に押してみてください。
+
+![](<スクリーンショット 2025-05-15 104331.png>)
+
+
+### カットの選択とプレビュー再生
+
+次に描いてからプレビュー（描いた絵を動画のように再生）するまでの流れを説明します。
+
+ざっくりとした流れはキャンバスに絵を描いて画面右上の右向き三角形ボタンを押したらプレビューできます。
+
+もう少し具体的な操作をお伝えすると…
+
+* 画面上側のカット一覧から別のカットを選べます。（またはキーボードの左右矢印キーでも動かせます）
+* カット一覧のアイテム左下がカット番号、右下がカットの表示時間です。（[表示時間の読み方](#表示時間)）
+* カットを切り替えてキャンバスに自由に描いてみてください
+* プレビューしたくなったら右上の右向き三角形ボタンを押してみてください。プレビュー画面が表示されます。
+
+↓こちらがプレビュー画面です
+
+![](<スクリーンショット 2025-05-15 112826.png>)
+
+プレビュー画面内の右向き三角形（再生ボタン）を押すとプレビュー再生が始まります。再生ボタンの左にある矢印一周ボタンを押すと先頭から再生できます。
+
+プレビューを終了するにはプレビュー画面上部にある左向き矢印ボタンを押します。
+
+
+### 動画として出力
+
+![](<スクリーンショット 2025-05-15 113246.png>)
+
+各ページの画面右上にある下線付き下向き矢印ボタンを押すとエクスポートページが表示されます。
+
+![](<スクリーンショット 2025-05-15 113437.png>)
+
+開くと何もないので「エクスポート方法を追加」ボタンを押して、「動画コンテ」を押してみてください。
+
+![](<スクリーンショット 2025-05-15 115231.png>)
+
+動画コンテの右側にあるエクスポートボタンを押すと出力が始まります。結構時間掛かります。
+
+完了すると出力したファイルがエクスプローラーと共に表示されるので、動画再生ソフトなどを使って再生して内容を確認してみてください。
+
+> プレビューやエクスポートの透かし表示はエクスポートページ上部からアドオンを購入すると非表示にできます。
 
 ## アプリの基本的な動作
 
@@ -11,10 +72,10 @@
 * 操作結果は常に保存されます
 * 重い操作には「確認ダイアログの表示」または「元に戻す操作」が提供されます
 
-### 複数ウィンドウ表示に対応
+### 複数のアプリウィンドウ起動に対応
 
-* Starryboardアプリは複数ウィンドウを表示できます
-* エピソードファイルはウィンドウに紐づいて管理されるため、既に開かれているエピソードを他のウィンドウが開くことはできません
+* Starryboardは複数ウィンドウを表示できます
+* エピソードファイルは各ウィンドウに紐づいて管理されるため、既に開かれているエピソードを他のウィンドウが開くことはできません
 * プレビュー表示のみ、エピソード内から別ウィンドウを表示できます（プレビューウィンドウの表示設定から切替可能です）
 
 ## 用語説明
@@ -25,9 +86,9 @@
 
 Starryboardではエピソードを１つのファイルとして管理しており、ファイル中には全てのカット、カット内の画像、キャンバス設定、カメラ・レイヤーのモーション（動き、アニメーション）、エクスポート方法などが記録されます。
 
-> エピソードファイルのフォーマットの詳細 
+> エピソードのファイル形式について
 > 
-> エピソードファイルは LiteDB と呼ばれるデータベースライブラリに基づいたファイルフォーマットで記録されています。データベース型ファイルフォーマットを用いることで、画像やアニメーションなど異なる種類のデータを１つのファイルで管理しています。安全なデータの読み書き機能（トランザクション処理）を土台にしているため、OSやアプリがクラッシュするなどデータ書き込みが途中だった場合でも安全なデータ状態に復帰して動かすことができると期待できます。
+> エピソードは LiteDB と呼ばれるデータベースライブラリに基づいたファイルフォーマットで記録されています。データベース型ファイルフォーマットを用いることで、画像やアニメーションなど異なる種類のデータを１つのファイルで管理しています。安全なデータの読み書き機能（トランザクション処理）を土台にしているため、OSやアプリがクラッシュするなどデータ書き込みが途中だった場合でも安全なデータ状態に復帰して動かすことができると期待できます。
 
 ### シリーズ
 
@@ -35,11 +96,27 @@ Starryboardではエピソードを１つのファイルとして管理してお
 
 シリーズはフォルダですが、フォルダ内にフォルダを作る機能は今後対応予定です。（v0.4.0時点では未対応）
 
+### シーン
+
+Starryboardでは一定区間のカットを束ねたものをシーンと呼びます。
+
+シーンを指定するにはカットに対してシーン区切りを設定します。リストページなどに配置された大きくスクロールするボタンはシーン区切りのあるカットに頭出しする形でスクロールします。
+
+プレビュー時はシーン区切り単位で範囲を指定できます。
+
+エクスポート時にシーン区切りを使ってチャプター情報を出力できます。
+
 ### カット
 
 映像構成単位の一つとして動画撮影時にひと回しで撮影する範囲を「カット」と呼ぶそうですが、Starrybaordではこの捉え方を採用しています。
 
 カットにはカット番号、イメージ、アクションとセリフのテキスト、表示する秒数、そして画像などのデータが含まれます。
+
+### 表示時間
+
+カットの表示時間は「01+00」と表記されるように特殊です。プラス記号の左側が秒数、右側がフレーム数です。
+
+フレーム数はエピソードに設定した秒間フレーム数を元に指定できるようになっています。デフォルトでは「24」が指定されていますが、これは24フレームで１秒を数えるという意味です。例えば48フレームで２秒、12フレームで0.5秒とも言えます。
 
 ### レイヤー
 
@@ -51,9 +128,9 @@ Starryboardではエピソードを１つのファイルとして管理してお
 
 主にキャラクターや背景など描き分ける対象となる識別用のラベルです。
 
-プレビューやエクスポートの際にレイヤーの表示切替を管理するために使ったり、台本出力時に話者名識別をする際の優先識別ラベルとして使い割れます。
+プレビューやエクスポートの際にレイヤーの表示切替を管理できます。また、台本出力時に話者名識別をする際の優先識別ラベルとしてタグを使うこともできます。
 
-アプリ内の検索時にもタグを元に検索出来るようになる予定です（v0.4.0時点では未対応）
+【対応予定】エピソード内検索時にタグを指定して検索できるようになる予定です。
 
 ### 接続カット
 
@@ -68,26 +145,23 @@ Starryboardではエピソードを１つのファイルとして管理してお
 
 共有レイヤーも通常のレイヤーと同様に並び順を変えることができます。（レイヤーの
 
-### シーン
+### ドロワー
 
-カットにはシーン区切りを設定できます。リストページなどに配置された大きくスクロールするボタンはシーン区切りのあるカットに頭出しする形でスクロールします。
+ペン、ブラシなどの筆先のこと。設定ページのドロワー設定からドロワーの追加・削除・編集ができます。
 
-プレビュー時はシーン区切り単位で範囲を指定できます。
+どのドロワーで描写したかといった情報はレイヤーには保存されません。
 
-## ページ説明
+> ペン先のパラメータの種類は Universal Windows Platform (UWP) の InkCanvas に依存しています。
 
-### シリーズ一覧ページの使い方
+### カラーパレット
 
+カラーパレットで描写する色を管理できます。各色の保存先にはエピソードとタグの２種類があります。エピソードに保存された色は全てのカット・レイヤーで共通です。
 
+タグに設定した色はレイヤーに設定したタグに応じてカラーパレットの表示されます。
 
-### エピソード一覧ページの使い方
+### プレビュー
 
-### リストページの使い方
+カットを動画のように次々と表示して確認する機能です。
 
-### キャンバスページの使い方
-
-### プレビューページの使い方
-
-### エクスポートページの使い方
 
 
