--- a/starryboard/features/v0.md
+++ b/starryboard/features/v0.md
@@ -163,5 +163,61 @@ Starryboardでは一定区間のカットを束ねたものをシーンと呼び
 
 カットを動画のように次々と表示して確認する機能です。
 
+### リファレンス
+
+キャンバスページのキャンバス右上にある３つの点々ボタンから「リファレンス」を選択すると編集画面を表示できます。
+
+リファレンス（参照）はエピソードに保存されない「一時参照」と、エピソードに保存される「永続参照」の２種類に分けられます。
+
+対して永続参照はキャンバス
+
+#### 一時参照
+
+エピソードに保存されず、アプリを閉じたタイミングで参照情報が失われます。
+
+一時参照の表示アイテムはプレビューやエクスポートには影響しません。
+
+表示基準範囲はウィンドウサイズに依存します。ウィンドウサイズの変更時には追従してサイズ、位置が補正されます。
+
+【対応予定】表示サイズの切り抜き表示（クロッピング）に対応予定です。
+
+#### オニオンスキン
+
+（機能更新予定のためドキュメント未対応）
+
+#### 外部画像の表示
+
+「参照表示」の右側にある追加ボタンから選べます。
+
+アプリ外で画像ファイルが更新されても自動更新では更新されません。参照リストのアイテムを長押しor右クリックして表示されるアイテムメニューから「更新」を選択すると画像が再読み込みされます。
+
+
+#### ウィンドウキャプチャ表示
+
+「参照表示」の右側にある追加ボタンから選べます。
+
+他のアプリウィンドウをStarryboardアプリ内に表示できます。3Dモデリングソフトや動画再生ソフトなどウィンドウとして表示されているものは全て指定可能です。
+
+他ウィンドウの表示内容をアプリ側で動画データのような形で受け取りアプリの表示要素の一部として再生表示しています。ウィンドウが最小化されている場合は画像の更新を受け取れません。
+
+キャンバス上の表示サイズが大き過ぎる場合は、参照リストのアイテムを長押しor右クリックして表示されるアイテムメニューから「リセット」を選ぶと、表示位置とサイズがリセットされます。
+
+#### 別カットのタグ別表示
+
+キャンバスページ上部のカット一覧のカットアイテムを長押しor右クリックして「このカットを参照表示」から選べます。
+
+### 永続参照
+
+エピソードに保存される参照情報です。カットのレイヤー情報と同様に保存されます。
+
+表示基準範囲はカットのキャンバスです。
+
+永続参照に追加した場合、デフォルトではプレビューやエクスポートに表示されます。
+
+【対応予定】レイヤーと同様にレイヤー変形出来ます。
+
+
+
+
 
 
