add Onion Skin feature description.

--- a/starryboard/features/v0.md
+++ b/starryboard/features/v0.md
@@ -183,7 +183,21 @@ Starryboardでは一定区間のカットを束ねたものをシーンと呼び
 
 #### オニオンスキン
 
-（機能更新予定のためドキュメント未対応）
+オニオンスキンは前後のカットに含まれるレイヤーをキャンバス上に参照表示できる機能です。
+
+三つの色の違う輪が斜めに重なっているアイコンがオニオンスキンボタンです。オニオンスキンボタンを押すと有効状態・無効状態に切り替えられます。
+
+![alt text](<スクリーンショット 2025-06-03 152701.png>)
+
+オニオンスキンを有効状態に切り替えると上記画像のようにオニオンスキンの設定UIが表示されます。
+
+【表示カット範囲を選択】を選択して前後のカットを含めるように選んでみてください。キャンバスに表示中のカットを中心に選択されます。別カットを選択すると表示中カットの前後カットが連なって選択されます。
+
+選択出来たらすぐ下の「選択完了」を押します。
+
+【表示タグ】からオニオンスキンの表示対象レイヤーを選択できます。レイヤーではなくタグ毎に一括して表示切替します。
+
+【色の置き換え】を指定すると前後カットのレイヤーの描画色を変更して現在カットと見分けやすく表示できます。
 
 #### 外部画像の表示
 
